--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -216,6 +216,7 @@
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 	<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
+	<script src="~/js/Background Effect/Background.js" asp-append-version="true"></script>
 	<script>
 		var currentIndex = 0;
 		var imageUrls = @Json.Serialize(Model.ImageUrls);
@@ -253,4 +254,5 @@
 			});
 		});
 	</script>
+
 }
