--- a/Xcelerate/Views/Shared/_AllUserCarAds.cshtml
+++ b/Xcelerate/Views/Shared/_AllUserCarAds.cshtml
@@ -66,6 +66,7 @@ else
 		</article>
 	</section>
 }
+<script src="~/js/Background Effect/Background.js" asp-append-version="true"></script>
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
