--- a/Xcelerate/Views/Shared/_AllUserCars.cshtml
+++ b/Xcelerate/Views/Shared/_AllUserCars.cshtml
@@ -2,117 +2,122 @@
 
 <link rel="stylesheet" href="~/css/UserCars/Index.css" asp-append-version="true" />
 
+@if (ViewBag.Notification != null)
+{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        Swal.fire({
+            icon: 'success',
+            title: 'Success!',
+            text: '@ViewBag.Notification',
+        });
+    </script>
+}
+
 @if (Model != null && Model.Count > 0)
 {
-	<section class="card-holder">
-		@foreach (var ad in Model)
-		{
-			<article class="car-card">
-				<div class="image-holder">
-					@{
-						// Display the first image
-						var firstImage = ad.ImageUrls.FirstOrDefault();
-						if (firstImage != null)
-						{
-							<img src="~/Images/Ad/@firstImage" alt="First image of the car ad" />
-						}
-					}
-				</div>
-				<h2 class="article-title">@ad.Brand @ad.Model</h2>
-				<div card-text>
-					<ul>
-						<li><strong>Price:</strong> @ad.Price$</li>
-						<li><strong>Year:</strong> @ad.Year</li>
-						<li><strong>Engine:</strong> @ad.Engine</li>
-						<li><strong>Condition:</strong> @ad.Condition</li>
-						<li><strong>Euro Standard:</strong> @ad.EuroStandard</li>
-						<li><strong>Fuel Type:</strong> @ad.FuelType</li>
-						<li><strong>Owner:</strong> @ad.FirstName @ad.LastName</li>
-					</ul>
-					<footer class="bottom-text">
-						<i class="sell-delete-info-buttons">
-							<a class="sell-button" asp-area="" asp-controller="UserCars" asp-action="Sell" asp-route-carId="@ad.CarId">Sell</a>
-							<form asp-area="" asp-controller="AdUserCars asp-action="Delete" asp-route-carId="@ad.CarId" method="post">
-								@Html.AntiForgeryToken()
-								<button type="button" class="delete-button-user" data-carid="@ad.CarId">Delete</button>
-							</form>						
-							<a class="view-button" asp-area="" asp-controller="UserCars" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
-						</i>
-					</footer>
-				</div>
-			</article>
-		}
-	</section>
+    <section class="card-holder">
+        @foreach (var ad in Model)
+        {
+            <article class="car-card">
+                <div class="image-holder">
+                    @{
+                        // Display the first image
+                        var firstImage = ad.ImageUrls.FirstOrDefault();
+                        if (firstImage != null)
+                        {
+                            <img src="~/Images/Ad/@firstImage" alt="First image of the car ad" />
+                        }
+                    }
+                </div>
+                <h2 class="article-title">@ad.Brand @ad.Model</h2>
+                <div card-text>
+                    <ul>
+                        <li><strong>Price:</strong> @ad.Price$</li>
+                        <li><strong>Year:</strong> @ad.Year</li>
+                        <li><strong>Engine:</strong> @ad.Engine</li>
+                        <li><strong>Condition:</strong> @ad.Condition</li>
+                        <li><strong>Euro Standard:</strong> @ad.EuroStandard</li>
+                        <li><strong>Fuel Type:</strong> @ad.FuelType</li>
+                        <li><strong>Owner:</strong> @ad.FirstName @ad.LastName</li>
+                    </ul>
+                    <footer class="bottom-text">
+                        <i class="sell-delete-info-buttons">
+                            <a class="sell-button" asp-area="" asp-controller="UserCars" asp-action="Sell" asp-route-carId="@ad.CarId">Sell</a>
+                            <form asp-area="" asp-controller="AdUserCars" asp-action="Delete" asp-route-carId="@ad.CarId" method="post">
+                                @Html.AntiForgeryToken()
+                                <button type="button" class="delete-button-user" data-carid="@ad.CarId">Delete</button>
+                            </form>
+                            <a class="view-button" asp-area="" asp-controller="UserCars" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
+                        </i>
+                    </footer>
+                </div>
+            </article>
+        }
+    </section>
 }
 else
 {
-	<section class="card-holder-message">
-		<article class="car-card-message">
-			<h2 class="article-title-message"> </h2>
-			<div card-text>
-				<h2 class="message">You don't have any cars yet. Consider buying one!</h2>
-				<footer class="bottom-text-message">
-					<ul>
-						<i class="create-message-button">
-							<a asp-area="" asp-controller="Ad" asp-action="Create">CREATE</a>
-						</i>
-					</ul>
-				</footer>
-			</div>
-		</article>
-	</section>
+    <section class="card-holder-message">
+        <article class="car-card-message">
+            <h2 class="article-title-message"> </h2>
+            <div card-text>
+                <h2 class="message">You don't have any cars yet. Consider buying one!</h2>
+                <footer class="bottom-text-message">
+                    <ul>
+                        <i class="create-message-button">
+                            <a asp-area="" asp-controller="Ad" asp-action="Create">CREATE</a>
+                        </i>
+                    </ul>
+                </footer>
+            </div>
+        </article>
+    </section>
 }
 
-
+<script src="~/js/Background Effect/Background.js" asp-append-version="true"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-	$(document).ready(function () {
-		$('.delete-button-user').click(function () {
-			var carId = $(this).data('carid');
-			Swal.fire({
-				title: 'Are you sure?',
-				text: 'You won\'t be able to revert this!',
-				icon: 'warning',
-				showCancelButton: true,
-				confirmButtonColor: '#3085d6',
-				cancelButtonColor: '#d33',
-				confirmButtonText: 'Yes, delete it!'
-			}).then((result) => {
-				if (result.isConfirmed) {
-					$.ajax({
-						url: '@Url.Action("Delete", "UserCars")',
-						type: 'POST',
-						data: { carId: carId },
-						headers: {
-							RequestVerificationToken: $('input[name="__RequestVerificationToken"]').val()
-						},
-						success: function () {
-							window.location.href = '@Url.Action("Index", "UserCars")';
-						},
-						error: function (xhr, status, error) {
-							console.error(xhr.responseText);
-						}
-					});
-				}
-			});
-		});
-	});
+    $(document).ready(function () {
+        if (sessionStorage.getItem('notificationMessage')) {
+            Swal.fire({
+                icon: 'success',
+                title: 'Success!',
+                text: sessionStorage.getItem('notificationMessage'),
+            });
+            sessionStorage.removeItem('notificationMessage'); // Clear the message after displaying
+        }
+
+        $('.delete-button-user').click(function () {
+            var carId = $(this).data('carid');
+            Swal.fire({
+                title: 'Are you sure?',
+                text: 'You won\'t be able to revert this!',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '@Url.Action("Delete", "UserCars")',
+                        type: 'POST',
+                        data: { carId: carId },
+                        headers: {
+                            RequestVerificationToken: $('input[name="__RequestVerificationToken"]').val()
+                        },
+                        success: function () {
+                            window.location.href = '@Url.Action("Index", "UserCars")';
+                        },
+                        error: function (xhr, status, error) {
+                            console.error(xhr.responseText);
+                        }
+                    });
+                }
+            });
+        });
+    });
 </script>
-
-@if (TempData["DeleteMessage"] != null)
-{
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-	<script>
-		Swal.fire({
-			icon: 'success',
-			title: 'Ad deleted!',
-			text: '@TempData["DeleteMessage"]',
-		});
-	</script>
-	{
-		TempData.Remove("DeleteMessage");
-	}
-}
