--- a/Xcelerate/Views/UserCars/Information.cshtml
+++ b/Xcelerate/Views/UserCars/Information.cshtml
@@ -68,6 +68,8 @@
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 	<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
+	<script src="~/js/Background Effect/Background.js" asp-append-version="true"></script>
+
 	<script>
 		var currentIndex = 0;
 		var imageUrls = @Json.Serialize(Model.ImageUrls);
