--- a/Xcelerate/wwwroot/css/Ad/Index.css
+++ b/Xcelerate/wwwroot/css/Ad/Index.css
@@ -5,7 +5,7 @@ html {
     font-family: "Mulish", sans-serif;
 }
 
-@keyframes gradient {
+@keyframes gradientShift {
     0% {
         background-position: 0% 50%;
     }
@@ -19,11 +19,72 @@ html {
     }
 }
 
+.abstract-element {
+    position: absolute;
+    border-radius: 50%; /* Keep it circular */
+    opacity: 0.8; /* Slight transparency */
+    animation: moveElement 30s infinite;
+    mix-blend-mode: screen; /* This helps with blending the colors */
+    z-index: -2;
+    background-size: cover;
+    background-repeat: no-repeat;
+    will-change: transform, clip-path; /* Helps with smoother animations */
+}
+
+@keyframes moveElement {
+    0% {
+        transform: translate(0, 0) scale(1);
+    }
+
+    10% {
+        transform: translate(20vw, 10vh) scale(1.2);
+    }
+
+    20% {
+        transform: translate(30vw, -15vh) scale(1.3);
+    }
+
+    30% {
+        transform: translate(-10vw, 25vh) scale(1.1);
+    }
+
+    40% {
+        transform: translate(-20vw, -20vh) scale(1.2);
+    }
+
+    50% {
+        transform: translate(10vw, 30vh) scale(1.1);
+    }
+
+    60% {
+        transform: translate(-25vw, -10vh) scale(1.3);
+    }
+
+    70% {
+        transform: translate(15vw, 20vh) scale(1.2);
+    }
+
+    80% {
+        transform: translate(-30vw, 15vh) scale(1.1);
+    }
+
+    90% {
+        transform: translate(20vw, -25vh) scale(1.2);
+    }
+
+    100% {
+        transform: translate(0, 0) scale(1);
+    }
+}
+
+
 body {
-    background: linear-gradient(-45deg, #6b0000, #8b0000, #F80D30, #540000);
-    animation: gradient 5s ease infinite;
+    background: linear-gradient(135deg, #1b2838, #2a475e, #4d6a79, #171a21);
+    animation: gradientShift 5s ease infinite;
+    background-size: 100% 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden
 }
 
 .div-wrapper {
@@ -253,6 +314,28 @@ body {
     text-decoration: none;
 }
 
+#filter-form-container {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out, padding 0.5s ease-out;
+}
+
+    #filter-form-container.expanded {
+        max-height: 1000px; /* Adjust this value as needed */
+        padding: 20px 0;
+    }
+
+#toggle-button {
+    display: inline-block;
+    margin-left: 46%;
+    margin-top: 25px;
+    cursor: pointer;
+    font-size: 20px;
+    text-align: center; /* Center the text */
+    background: linear-gradient(90deg, black, rgba(0, 0, 0, 0.2));
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
 .filters {
     display: flex;
     padding: 0px 60px 0px 60px;
@@ -262,7 +345,7 @@ body {
 }
 
 .filter-card {
-    margin: 45px 108px 0px 222px;
+    margin: 0px 108px 0px 222px;
     border-radius: 24px;
     background-repeat: no-repeat;
     background-size: cover;
