--- a/Xcelerate/Views/Account/Login.cshtml
+++ b/Xcelerate/Views/Account/Login.cshtml
@@ -2,17 +2,9 @@
 
 <link rel="stylesheet" href="~/css/Account/Login/Login.css" asp-append-version="true" />
 
-<svg xmlns="http://www.w3.org/2000/svg">
-	<!-- filterUnits is required to prevent clipping the blur outside the viewBox -->
+<partial name="_WebsiteName">
+</partial>
 
-	<filter id="motion-blur-filter" filterUnits="userSpaceOnUse">
-		<!-- We only want horizontal blurring. x: 100, y: 0 -->
-
-		<feGaussianBlur stdDeviation="100 0"></feGaussianBlur>
-	</filter>
-</svg>
-
-<span class="website-name" filter-content="X">Xcelerate</span>
 <article class="card-login">
 	<form method="post" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl" class="card-content">
 		@Html.AntiForgeryToken()
