--- a/Xcelerate/Views/Home/About.cshtml
+++ b/Xcelerate/Views/Home/About.cshtml
@@ -1,17 +1,9 @@
 ﻿<link rel="stylesheet" href="~/css/Home/About/About.css" asp-append-version="true" />
 
 <div class="parallax">
-        <svg xmlns="http://www.w3.org/2000/svg">
-            <!-- filterUnits is required to prevent clipping the blur outside the viewBox -->
 
-            <filter id="motion-blur-filter" filterUnits="userSpaceOnUse">
-                <!-- We only want horizontal blurring. x: 100, y: 0 -->
-
-                <feGaussianBlur stdDeviation="100 0"></feGaussianBlur>
-            </filter>
-        </svg>
-
-        <span class="website-name" filter-content="X">Xcelerate</span>
+    <partial name="_WebsiteName">
+    </partial>
 
         <img class="top-image-first"
          src="~/Images/About/sky-top-image.png"
