--- a/Xcelerate/Views/Home/HomePage.cshtml
+++ b/Xcelerate/Views/Home/HomePage.cshtml
@@ -2,17 +2,8 @@
 
 <link rel="stylesheet" href="~/css/Home/HomePage/HomePage.css" asp-append-version="true" />
 
-<svg xmlns="http://www.w3.org/2000/svg">
-	<!-- filterUnits is required to prevent clipping the blur outside the viewBox -->
-
-	<filter id="motion-blur-filter" filterUnits="userSpaceOnUse">
-		<!-- We only want horizontal blurring. x: 100, y: 0 -->
-
-		<feGaussianBlur stdDeviation="100 0"></feGaussianBlur>
-	</filter>
-</svg>
-
-<span class="website-name" filter-content="X">Xcelerate</span>
+<partial name="_WebsiteName">
+</partial>
 
 <article class="card-news" asp-area="" asp-controller="Home" asp-action="HomePage">
 	<div id="clock"></div>
