Update: - Removed "Buy" button

--- a/Xcelerate/wwwroot/css/Ad/Information.css
+++ b/Xcelerate/wwwroot/css/Ad/Information.css
@@ -345,21 +345,21 @@ body {
 }
 
 
-.buy-button, .owner-div, .compare-button {
+.start-chat-button, .owner-div, .compare-button {
     font-size: 35px;
     margin-top: 10px;
     padding: 0px 25px;
     border-radius: 15px;
-    height:45px;
+    height: 45px;
 }
 
-.buy-button, .compare-button {
+.start-chat-button, .compare-button {
     background: linear-gradient(80deg, darkred, rgba(0, 0, 0, 0.37));
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 
-    .buy-button:hover,
+    .start-chat-button:hover,
     .compare-button:hover {
         cursor: pointer;
         opacity: 0.8; /* Reduce opacity on hover for visual feedback */
