--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -30,18 +30,18 @@
 					}
 					else
 					{
-						<!-- Display content for non-owner -->
+						@* <!-- Display content for non-owner -->
 						<form asp-area="" asp-controller="Ad" asp-action="Buy" asp-route-carId="@Model.CarId" asp-route-adId="@Model.AdId" method="post">
 							@Html.AntiForgeryToken()
 							<button type="submit" class="buy-button">BUY</button>
-						</form>
+						</form> *@
 
 						<form asp-controller="Ad" asp-action="StartChat" method="get">
 							@Html.AntiForgeryToken()
 							<input type="hidden" name="otherUserId" value="@Model.UserId" />
 							<input type="hidden" name="AdId" value="@Model.AdId" />
 							<input type="hidden" name="carId" value="@ViewBag.CarId" />
-							<button type="submit" class="start-chat-button">Start Chat</button>
+							<button type="submit" class="start-chat-button">CHAT</button>
 						</form>
 
 
