--- a/Xcelerate/Views/Ad/Compare.cshtml
+++ b/Xcelerate/Views/Ad/Compare.cshtml
@@ -127,26 +127,27 @@
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 	<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
+	<script src="~/js/Background Effect/Background.js" asp-append-version="true"></script>
+
 	<script>
-		var currentIndex = [0, 0]; // Initialize current index for each car
+		var currentIndex = [0, 0];
 		var imageUrls = [
 		@Json.Serialize(Model.Item1.ImageUrls),
 		@Json.Serialize(Model.Item2.ImageUrls)
-				];
+						];
 
 		function changeImage(carId, step) {
-			var index = carId === '@Model.Item1.CarId' ? 0 : 1; // Determine the index of the car
+			var index = carId === '@Model.Item1.CarId' ? 0 : 1;
 
-			currentIndex[index] += step; // Update current index
+			currentIndex[index] += step;
 
-			// Ensure the index stays within bounds
 			if (currentIndex[index] < 0) {
 				currentIndex[index] = imageUrls[index].length - 1;
 			} else if (currentIndex[index] >= imageUrls[index].length) {
 				currentIndex[index] = 0;
 			}
 
-			var imageUrl = '@Url.Content("~/Images/Ad/")' + imageUrls[index][currentIndex[index]]; // Get the URL of the current image
+			var imageUrl = '@Url.Content("~/Images/Ad/")' + imageUrls[index][currentIndex[index]];
 
 			$(".image-holder img").eq(index).fadeTo(200, 0, function () {
 				$(this).attr("src", imageUrl).fadeTo(200, 1);
