--- a/Xcelerate/wwwroot/css/Ad/Compare.css
+++ b/Xcelerate/wwwroot/css/Ad/Compare.css
@@ -5,7 +5,7 @@ html {
     font-family: "Mulish", sans-serif;
 }
 
-@keyframes gradient {
+@keyframes gradientShift {
     0% {
         background-position: 0% 50%;
     }
@@ -19,11 +19,72 @@ html {
     }
 }
 
+.abstract-element {
+    position: absolute;
+    border-radius: 50%; /* Keep it circular */
+    opacity: 0.8; /* Slight transparency */
+    animation: moveElement 30s infinite;
+    mix-blend-mode: screen; /* This helps with blending the colors */
+    z-index: -2;
+    background-size: cover;
+    background-repeat: no-repeat;
+    will-change: transform, clip-path; /* Helps with smoother animations */
+}
+
+@keyframes moveElement {
+    0% {
+        transform: translate(0, 0) scale(1);
+    }
+
+    10% {
+        transform: translate(20vw, 10vh) scale(1.2);
+    }
+
+    20% {
+        transform: translate(30vw, -15vh) scale(1.3);
+    }
+
+    30% {
+        transform: translate(-10vw, 25vh) scale(1.1);
+    }
+
+    40% {
+        transform: translate(-20vw, -20vh) scale(1.2);
+    }
+
+    50% {
+        transform: translate(10vw, 30vh) scale(1.1);
+    }
+
+    60% {
+        transform: translate(-25vw, -10vh) scale(1.3);
+    }
+
+    70% {
+        transform: translate(15vw, 20vh) scale(1.2);
+    }
+
+    80% {
+        transform: translate(-30vw, 15vh) scale(1.1);
+    }
+
+    90% {
+        transform: translate(20vw, -25vh) scale(1.2);
+    }
+
+    100% {
+        transform: translate(0, 0) scale(1);
+    }
+}
+
+
 body {
-    background: linear-gradient(-45deg, #6b0000, #8b0000, #F80D30, #540000);
-    animation: gradient 5s ease infinite;
+    background: linear-gradient(135deg, #1b2838, #2a475e, #4d6a79, #171a21);
+    animation: gradientShift 5s ease infinite;
+    background-size: 100% 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden
 }
 
 .div-wrapper {
